# Cerberus

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  SPECIFICATION.md  cerberus.sh  config-tls-example.toml  debug-config.sh  fix-tests.sh  setup-permissions.sh  test-config.toml
.github/workflows/: ci.yml
config/: botPolicy.json
docs/: cli-spec.md  config-spec.md  utils-spec.md
lib/core/: config-simple.sh  utils.sh
lib/generators/: anubis.sh  docker-compose.sh  proxy-configs.sh
lib/scaling/: auto-scaler.sh
lib/templates/: manager.sh
old-sh/: cerberus.sh
old-sh/tests/: simple-test.sh  test-all-config-patterns.sh  test-anubis-generator.sh  test-debug-config.sh  test-docker-compose-simple.sh  test-dockerfile-generator.sh  test-proxy-config-generator.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  tests.rs
src/generators/: anubis.rs  dockerfile.rs  mod.rs  proxy_config.rs  update_script.rs
src/scaling/: mod.rs
src/templates/: Caddyfile.hbs  Dockerfile.caddy.hbs  Dockerfile.haproxy.hbs  Dockerfile.nginx.hbs  Dockerfile.traefik.hbs  haproxy.cfg.hbs  mod.rs  nginx.conf.hbs  traefik.yml.hbs
tests/: simple-test.sh  test-anubis-generator.sh  test-bash-loop.sh  test-docker-compose-generator.sh  test-docker-compose-up.sh  test-dockerfile-generator.sh  test-integration-all.sh  test-integration-simple.sh  test-minimal.sh  test-proxy-config-generator.sh  test-proxy-debug.sh  test-proxy-simple.sh  test-quick.sh  test-simple-config.sh
tmp/: caddy.sh  docker-compose-proxy2.yaml  docker-compose.sh  setup.sh
(+57 files in other folders)
