[package]
name = "cerberus"
version = "0.1.0"
edition = "2024"
description = "Multi-layer proxy architecture system with DDoS protection and auto-scaling"
license = "MIT"
repository = "https://github.com/ruruke/Cerberus"
authors = ["ruruke"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
handlebars = "5.0"
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"
